force-app/main/default/objects/Form__c/Form__c.object-meta.xml
<CustomObject>
    <description>TO BE DEPRECATED:
Form was used to store all the forms related to the patient.</description>
    <label>Form</label>
    <nameField>
        <label>Form Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Forms</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>