force-app/main/default/objects/Form__c/fields/Approval_Values1__c.field-meta.xml
<CustomField>
    <fullName>Approval_Values1__c</fullName>
    <label>Approval Values1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>