force-app/main/default/objects/Form__c/fields/Approval_Values_2__c.field-meta.xml
<CustomField>
    <fullName>Approval_Values_2__c</fullName>
    <label>Approval Values 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>