force-app/main/default/objects/Form__c/fields/DateTime_of_Signature__c.field-meta.xml
<CustomField>
    <fullName>DateTime_of_Signature__c</fullName>
    <label>DateTime of Signature</label>
    <type>Date</type>
</CustomField>