force-app/main/default/objects/Form__c/fields/Locations__c.field-meta.xml
<CustomField>
    <fullName>Locations__c</fullName>
    <label>Locations</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AUS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>