force-app/main/default/objects/Form__c/fields/Patient_Sign_Status__c.field-meta.xml
<CustomField>
    <fullName>Patient_Sign_Status__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Patient Sign Status</label>
    <type>Checkbox</type>
</CustomField>