force-app/main/default/objects/Form__c/fields/Patient_signature_comments__c.field-meta.xml
<CustomField>
    <fullName>Patient_signature_comments__c</fullName>
    <label>Patient signature comments</label>
    <type>TextArea</type>
</CustomField>