force-app/main/default/objects/Form__c/fields/Patient_Signature_Link__c.field-meta.xml
<CustomField>
    <fullName>Patient_Signature_Link__c</fullName>
    <label>Patient Signature Link</label>
    <length>255</length>
    <type>Text</type>
</CustomField>