force-app/main/default/objects/Form__c/fields/Schedule_Friday__c.field-meta.xml
<CustomField>
    <fullName>Schedule_Friday__c</fullName>
    <label>Schedule Friday</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Caseload Crystal at 01:30PM</fullName>
            </value>
            <value>
                <fullName>Caseload Ian at 01:45PM</fullName>
            </value>
            <value>
                <fullName>Gratitude Challenge A at 10:30AM</fullName>
            </value>
            <value>
                <fullName>Gratitude Challenge B at 10:30AM</fullName>
            </value>
            <value>
                <fullName>In-House 12 Step Meeting at 07:00PM</fullName>
            </value>
            <value>
                <fullName>Lunch at 12:00PM</fullName>
            </value>
            <value>
                <fullName>LWD: Mic Check at 10:00AM</fullName>
            </value>
            <value>
                <fullName>LWD: Psychoeducation at 01:30PM</fullName>
            </value>
            <value>
                <fullName>LW: Feel Good Friday at 03:00PM</fullName>
            </value>
            <value>
                <fullName>LW: Mic Check A at 10:00AM</fullName>
            </value>
            <value>
                <fullName>LW: Mic Check B at 10:00AM</fullName>
            </value>
            <value>
                <fullName>LW: Mic Check C at 10:00AM</fullName>
            </value>
            <value>
                <fullName>LW: Primary Group A at 01:30PM</fullName>
            </value>
            <value>
                <fullName>LW: Primary Group A at 03:00PM</fullName>
            </value>
            <value>
                <fullName>LW: Primary Group B at 11:30AM</fullName>
            </value>
            <value>
                <fullName>LW: Primary Group B at 01:30PM</fullName>
            </value>
            <value>
                <fullName>LW: Primary Group B at 03:00PM</fullName>
            </value>
            <value>
                <fullName>LW: Primary Group C at 11:30AM</fullName>
            </value>
            <value>
                <fullName>LW: Primary Group C at 01:30PM</fullName>
            </value>
            <value>
                <fullName>LW: Primary Group C at 03:00PM</fullName>
            </value>
            <value>
                <fullName>LW: Psychoeducation: Nutrition at 11:30AM</fullName>
            </value>
            <value>
                <fullName>Morning Check-In: 1 at 10:30AM</fullName>
            </value>
            <value>
                <fullName>Psychoeducation Group at 09:30AM</fullName>
            </value>
            <value>
                <fullName>Psychoeducation Group at 11:00AM</fullName>
            </value>
            <value>
                <fullName>Psychoeducation Let It Be A at 12:20PM</fullName>
            </value>
            <value>
                <fullName>Psychoeducation Let It Be B at 12:20PM</fullName>
            </value>
            <value>
                <fullName>Psychoeducation Let It Be C at 12:20PM</fullName>
            </value>
            <value>
                <fullName>Psychoeducation Mic Check A at 09:00AM</fullName>
            </value>
            <value>
                <fullName>Psychoeducation Mic Check B at 09:00AM</fullName>
            </value>
            <value>
                <fullName>Psychoeducation Mic Check C at 09:00AM</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>