force-app/main/default/objects/Form__c/fields/Schedule_Saturday__c.field-meta.xml
<CustomField>
    <fullName>Schedule_Saturday__c</fullName>
    <label>Schedule Saturday</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Family Program Saturday Afternoon Session at 12:30PM</fullName>
            </value>
            <value>
                <fullName>Family Program Saturday Lunch at 12:00PM</fullName>
            </value>
            <value>
                <fullName>Family Program Saturday Morning Session at 09:00AM</fullName>
            </value>
            <value>
                <fullName>In-House 12 Step Meeting at 07:00PM</fullName>
            </value>
            <value>
                <fullName>Lunch at 12:00PM</fullName>
            </value>
            <value>
                <fullName>LWD: Mic Check at 10:00AM</fullName>
            </value>
            <value>
                <fullName>LWD: Psychoeducation at 01:30PM</fullName>
            </value>
            <value>
                <fullName>LW: Mic Check A at 10:00AM</fullName>
            </value>
            <value>
                <fullName>LW: Mic Check B at 10:00AM</fullName>
            </value>
            <value>
                <fullName>LW: Mic Check C at 10:00AM</fullName>
            </value>
            <value>
                <fullName>LW: Primary Group A at 01:30PM</fullName>
            </value>
            <value>
                <fullName>LW: Primary Group B at 01:30PM</fullName>
            </value>
            <value>
                <fullName>LW: Primary Group C at 01:30PM</fullName>
            </value>
            <value>
                <fullName>LW: Psycho-education A at 03:00PM</fullName>
            </value>
            <value>
                <fullName>LW: Psychoeducation A at 11:30AM</fullName>
            </value>
            <value>
                <fullName>LW Psychoeducation B at 11:30AM</fullName>
            </value>
            <value>
                <fullName>LW: Psycho-education B at 03:00PM</fullName>
            </value>
            <value>
                <fullName>LW: Psycho-education C at 03:00PM</fullName>
            </value>
            <value>
                <fullName>LW: Psycho-education: C at 11:30AM</fullName>
            </value>
            <value>
                <fullName>Morning Check - In: 1 at 10:30AM</fullName>
            </value>
            <value>
                <fullName>Primary Process A at 10:30AM</fullName>
            </value>
            <value>
                <fullName>Primary Process B at 10:30AM</fullName>
            </value>
            <value>
                <fullName>Primary Process C at 10:30AM</fullName>
            </value>
            <value>
                <fullName>Psychoeducation: Community at 12:20PM</fullName>
            </value>
            <value>
                <fullName>Psychoeducation: Community Late Afternoon at 01:20PM</fullName>
            </value>
            <value>
                <fullName>Psychoeducation: Mic Check A at 09:00AM</fullName>
            </value>
            <value>
                <fullName>Psychoeducation: Mic Check B at 09:00AM</fullName>
            </value>
            <value>
                <fullName>Psychoeducation: Mic Check C at 09:00AM</fullName>
            </value>
            <value>
                <fullName>Psycho-education: Team-building: 1 at 01:30PM</fullName>
            </value>
            <value>
                <fullName>Yoga at 09:00AM</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>