force-app/main/default/objects/Form__c/fields/Schedule_Sunday__c.field-meta.xml
<CustomField>
    <fullName>Schedule_Sunday__c</fullName>
    <label>Schedule Sunday</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Family Program Sunday Afternoon Session at 12:30PM</fullName>
            </value>
            <value>
                <fullName>Family Program Sunday Lunch at 12:00PM</fullName>
            </value>
            <value>
                <fullName>Family Program Sunday Morning Session at 09:00AM</fullName>
            </value>
            <value>
                <fullName>In-House 12 Step Meeting at 07:00PM</fullName>
            </value>
            <value>
                <fullName>LWD: Mic Check at 10:00AM</fullName>
            </value>
            <value>
                <fullName>LWD: Psychoeducation at 01:30PM</fullName>
            </value>
            <value>
                <fullName>LW: Mic Check 1 at 10:00AM</fullName>
            </value>
            <value>
                <fullName>LW: Mic Check B at 10:00AM</fullName>
            </value>
            <value>
                <fullName>LW: Mic Check C at 10:00AM</fullName>
            </value>
            <value>
                <fullName>LW: Primary A: at 01:30PM</fullName>
            </value>
            <value>
                <fullName>LW: Primary B at 01:30PM</fullName>
            </value>
            <value>
                <fullName>LW: Primary C at 01:30PM</fullName>
            </value>
            <value>
                <fullName>LW: Psycho-education A: at 03:00PM</fullName>
            </value>
            <value>
                <fullName>LW: Psycho-education A: at 11:30AM</fullName>
            </value>
            <value>
                <fullName>LW: Psycho-education B at 11:30AM</fullName>
            </value>
            <value>
                <fullName>LW: Psycho-education B at 03:00PM</fullName>
            </value>
            <value>
                <fullName>LW: Psycho-education C at 11:30AM</fullName>
            </value>
            <value>
                <fullName>LW: Psycho-education C at 03:00PM</fullName>
            </value>
            <value>
                <fullName>Meditation: 1 at 01:30PM</fullName>
            </value>
            <value>
                <fullName>Morning Check-In: 1 at 10:30AM</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>