force-app/main/default/objects/Form__c/fields/Schedule_Thursday__c.field-meta.xml
<CustomField>
    <fullName>Schedule_Thursday__c</fullName>
    <label>Schedule Thursday</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Caseload at 06:00PM</fullName>
            </value>
            <value>
                <fullName>Caseload Crystal at 10:30AM</fullName>
            </value>
            <value>
                <fullName>Caseload Ian at 10:30AM</fullName>
            </value>
            <value>
                <fullName>Group 1 at 07:30PM</fullName>
            </value>
            <value>
                <fullName>Group 2 at 07:30PM</fullName>
            </value>
            <value>
                <fullName>Group 3 at 07:30PM</fullName>
            </value>
            <value>
                <fullName>Group 4 at 07:30PM</fullName>
            </value>
            <value>
                <fullName>Group 5 at 07:30PM</fullName>
            </value>
            <value>
                <fullName>Group A at 06:00PM</fullName>
            </value>
            <value>
                <fullName>Group B at 06:00PM</fullName>
            </value>
            <value>
                <fullName>Group C at 06:00PM</fullName>
            </value>
            <value>
                <fullName>Group D at 06:00PM</fullName>
            </value>
            <value>
                <fullName>Group E at 06:00PM</fullName>
            </value>
            <value>
                <fullName>In-House 12 Step Meeting at 07:00PM</fullName>
            </value>
            <value>
                <fullName>Lunch at 12:00PM</fullName>
            </value>
            <value>
                <fullName>LW: Mic Check A at 10:00AM</fullName>
            </value>
            <value>
                <fullName>LW: Mic Check B at 10:00AM</fullName>
            </value>
            <value>
                <fullName>LW Morning Meditation at 09:00AM</fullName>
            </value>
            <value>
                <fullName>LW: Morning Meditation at 09:00AM</fullName>
            </value>
            <value>
                <fullName>LW: Primary Group A at 11:30AM</fullName>
            </value>
            <value>
                <fullName>LW: Primary Group B at 11:30AM</fullName>
            </value>
            <value>
                <fullName>LW: Primary Group C at 11:30AM</fullName>
            </value>
            <value>
                <fullName>LW Psycho-education A at 01:30PM</fullName>
            </value>
            <value>
                <fullName>LW: Psycho-education B at 01:30PM</fullName>
            </value>
            <value>
                <fullName>LW: Psycho-education C at 01:30PM</fullName>
            </value>
            <value>
                <fullName>LW: Psycho-education: Lyric Analysis at 10:00AM</fullName>
            </value>
            <value>
                <fullName>LW: Recovery Playlist A at 03:00PM</fullName>
            </value>
            <value>
                <fullName>LW: Recovery Playlist B at 03:00PM</fullName>
            </value>
            <value>
                <fullName>LW: Recovery Playlist C at 03:00PM</fullName>
            </value>
            <value>
                <fullName>Morning Check - In: 1 at 10:30AM</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>