force-app/main/default/objects/Form__c/fields/Schedule_Wednesday__c.field-meta.xml
<CustomField>
    <fullName>Schedule_Wednesday__c</fullName>
    <label>Schedule Wednesday</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Creative Outlet at 10:30AM</fullName>
            </value>
            <value>
                <fullName>Creative Primary Group A at 09:00AM</fullName>
            </value>
            <value>
                <fullName>Creative Primary Group B at 09:00AM</fullName>
            </value>
            <value>
                <fullName>Creative Primary Group C at 09:00AM</fullName>
            </value>
            <value>
                <fullName>Creativity Caseload Crystal at 09:00AM</fullName>
            </value>
            <value>
                <fullName>Group 1 at 07:30PM</fullName>
            </value>
            <value>
                <fullName>Group 2 at 07:30PM</fullName>
            </value>
            <value>
                <fullName>Group 5 at 07:30PM</fullName>
            </value>
            <value>
                <fullName>Group A at 06:00AM</fullName>
            </value>
            <value>
                <fullName>Group B at 06:00PM</fullName>
            </value>
            <value>
                <fullName>Group C at 06:00PM</fullName>
            </value>
            <value>
                <fullName>Group D at 06:00PM</fullName>
            </value>
            <value>
                <fullName>Group E at 06:00PM</fullName>
            </value>
            <value>
                <fullName>In-House 12 Step Meeting at 07:00PM</fullName>
            </value>
            <value>
                <fullName>Lunch at 12:00PM</fullName>
            </value>
            <value>
                <fullName>LW: Creative Outlet at 11:30AM</fullName>
            </value>
            <value>
                <fullName>LW: Creative Primary A at 10:00AM</fullName>
            </value>
            <value>
                <fullName>LW: Creative Primary B at 10:00AM</fullName>
            </value>
            <value>
                <fullName>LW: Creative Primary C at 10:00AM</fullName>
            </value>
            <value>
                <fullName>LWD: Creativity in Recovery at 01:30PM</fullName>
            </value>
            <value>
                <fullName>LWD: Mic Check at 10:15AM</fullName>
            </value>
            <value>
                <fullName>LW: Open Mic at 01:30PM</fullName>
            </value>
            <value>
                <fullName>Morning Check-in: 1 at 10:30AM</fullName>
            </value>
            <value>
                <fullName>OP Community at 06:00PM</fullName>
            </value>
            <value>
                <fullName>OP Group at 06:00PM</fullName>
            </value>
            <value>
                <fullName>Psychoeducation Community Group at 12:20PM</fullName>
            </value>
            <value>
                <fullName>Psychoeducation Group at 09:30AM</fullName>
            </value>
            <value>
                <fullName>Psychoeducation Group 2 at 11:00AM</fullName>
            </value>
            <value>
                <fullName>Psychoeducation Group: Open Mic at 12:20PM</fullName>
            </value>
            <value>
                <fullName>Psycho-education: Teambuilding: 1 at 01:30PM</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>