force-app/main/default/objects/Form__c/fields/Scheduled_Monday__c.field-meta.xml
<CustomField>
    <fullName>Scheduled_Monday__c</fullName>
    <label>Scheduled Monday</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Caseload at 06:00PM</fullName>
            </value>
            <value>
                <fullName>Caseload Crystal at 12:20PM</fullName>
            </value>
            <value>
                <fullName>Group 1 at 07:30PM</fullName>
            </value>
            <value>
                <fullName>Group 2 at 07:30PM</fullName>
            </value>
            <value>
                <fullName>Group 3 at 07:30PM</fullName>
            </value>
            <value>
                <fullName>Group 4 at 07:30PM</fullName>
            </value>
            <value>
                <fullName>Group 5 at 07:30PM</fullName>
            </value>
            <value>
                <fullName>Group A at 06:00PM</fullName>
            </value>
            <value>
                <fullName>Group B at 06:00PM</fullName>
            </value>
            <value>
                <fullName>Group C at 06:00PM</fullName>
            </value>
            <value>
                <fullName>Group D at 06:00PM</fullName>
            </value>
            <value>
                <fullName>Group E at 06:00PM</fullName>
            </value>
            <value>
                <fullName>In-House 12 Step Meeting at 07:00PM</fullName>
            </value>
            <value>
                <fullName>Lunch at 12:00PM</fullName>
            </value>
            <value>
                <fullName>LW1: Mic Check at 11:30AM</fullName>
            </value>
            <value>
                <fullName>LW1: Songs of Life at 02:00PM</fullName>
            </value>
            <value>
                <fullName>LWD: Mic Check at 10:00AM</fullName>
            </value>
            <value>
                <fullName>LWD: Psychoeducation Group at 01:30PM</fullName>
            </value>
            <value>
                <fullName>LW: Goals A at 10:00AM</fullName>
            </value>
            <value>
                <fullName>LW: Goals B at 10:00AM</fullName>
            </value>
            <value>
                <fullName>LW: Goals C at 10:00AM</fullName>
            </value>
            <value>
                <fullName>LW: Primary Group A at 01:30PM</fullName>
            </value>
            <value>
                <fullName>LW: Primary Group B at 01:30PM</fullName>
            </value>
            <value>
                <fullName>LW: Primary Group C at 01:30PM</fullName>
            </value>
            <value>
                <fullName>LW: Psycho-education A: at 11:30AM</fullName>
            </value>
            <value>
                <fullName>LW: Psycho-education A: at 03:00PM</fullName>
            </value>
            <value>
                <fullName>LW: Psycho-education B at 03:00PM</fullName>
            </value>
            <value>
                <fullName>LW: Psycho-education B: at 11:30AM</fullName>
            </value>
            <value>
                <fullName>LW: Psycho-education C at 11:30AM</fullName>
            </value>
            <value>
                <fullName>LW: Psycho-education C at 03:00PM</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>