force-app/main/default/objects/Form__c/fields/Signature_value_1__c.field-meta.xml
<CustomField>
    <fullName>Signature_value_1__c</fullName>
    <label>Signature value 1</label>
    <type>TextArea</type>
</CustomField>