force-app/main/default/objects/Form__c/fields/Signature_value_2__c.field-meta.xml
<CustomField>
    <fullName>Signature_value_2__c</fullName>
    <label>Signature value 2</label>
    <type>TextArea</type>
</CustomField>