force-app/main/default/objects/Form__c/fields/Signature_value_3__c.field-meta.xml
<CustomField>
    <fullName>Signature_value_3__c</fullName>
    <label>Signature value 3</label>
    <type>TextArea</type>
</CustomField>