force-app/main/default/objects/Form__c/fields/Signed_By_Level_1__c.field-meta.xml
<CustomField>
    <fullName>Signed_By_Level_1__c</fullName>
    <label>Signed By Level 1</label>
    <type>TextArea</type>
</CustomField>