force-app/main/default/objects/Form__c/fields/Signed_By_Level_2__c.field-meta.xml
<CustomField>
    <fullName>Signed_By_Level_2__c</fullName>
    <label>Signed By Level 2</label>
    <type>TextArea</type>
</CustomField>