force-app/main/default/objects/Form__c/fields/Signed_By_Level_3__c.field-meta.xml
<CustomField>
    <fullName>Signed_By_Level_3__c</fullName>
    <label>Signed By Level 3</label>
    <type>TextArea</type>
</CustomField>