force-app/main/default/objects/Form__c/fields/Signed_Date_1__c.field-meta.xml
<CustomField>
    <fullName>Signed_Date_1__c</fullName>
    <label>Signed Date 1</label>
    <type>Date</type>
</CustomField>