force-app/main/default/objects/Form__c/fields/Signed_Date_3__c.field-meta.xml
<CustomField>
    <fullName>Signed_Date_3__c</fullName>
    <label>Signed Date 3</label>
    <type>Date</type>
</CustomField>